# opensource

./: .gitignore  README - 副本.md  README.md  git使用说明.docx
doc/: AI Settings.txt
doc/develop/: dtc.cod
doc/develop/ISO 15031/: Thumbs.db
doc/develop/SAE J1979协议合集/: J1979DA_201702.xlsx  J1979DA_201702_Annex B - Parameter IDs.xlsx  J1979DA_201702_Annex D - Monitor IDs - 副本.xlsx  J1979DA_201702_Annex D - Monitor IDs.xlsx  J1979DA_201702_Annex E - Units and Scaling.xlsx  J1979DA_201702_Annex G - InfoType IDs.xlsx  Thumbs.db  excel_to_json.py
doc/develop/SAE J1979协议合集/config/obd/: obd_mode01_pids_00_1F.json  obd_mode01_pids_20_3F.json  obd_mode01_pids_40_5F.json  obd_mode01_pids_60_7F.json  obd_mode01_pids_80_9F.json  obd_mode01_pids_A0_BF.json  obd_mode06_monitor_ids.json  obd_mode06_scaling_ids.json  obd_mode09_infotypes_00_0B.json  obd_mode09_infotypes_0C_15.json  obd_mode09_infotypes_16_1F.json  obd_mode09_infotypes_20_29.json
doc/标准手册/FK_CCU/: CCU BOM汇总表.xlsx  CCU台架标准生产指导书.md  生产检验表-机柜.xlsx
doc/标准手册/FK_CCU/CCU标准手册/: FRM-00_表单索引与归档总控制台账.xlsx  FRM-01_安装完成记录单.xlsx  FRM-02_线束标签与去向对照表.xlsx  FRM-03_测试执行记录单.xlsx  FRM-04_问题闭环与复测记录.xlsx  FRM-05_交付评审与放行单.xlsx  FRM-06_客户验收签收单.xlsx  init_project_forms.py  ~$FRM-00_表单索引与归档总控制台账.xlsx  一键初始化项目表单.bat
doc/软件说明文档/: CAN2LIN（必读）.md  FKVCI卡快速入门指南.md  VersionQuery（必读）.md  bscollector_api（必读）.md  dbc_api（必读）.md  dksent_api（必读）.md  doip_api（必读）.md  fkvci.md  fkvci_api（必读）.md  lxi_api（必读）.md  nwswitch_api（必读）.md  ssh_api（必读）.md  wimage_api（必读）.md  智能网联汽车车载网络测试系统开发创新平台软件截图.docx
doc/软件说明文档/FKMaster/: FKMaster - CAN Collector 用户使用手册.md  FKMaster - CAN 用户使用手册.md  FKMaster.md
fksoft/: CMakeLists.txt
fksoft/include/common/: file_logger.hpp  logger.hpp  thread_pool.hpp
fksoft/ipcap/: CMakeLists.txt  ipcap.cpp  ipcap.h  main.cpp
releases/updates/: FKMaster.json  NWSwitch.json  NetworkSwitch.json
soft/: README.md
soft/active/: IDM-Activation-Script-main.7z  typora破解激活.7z
src/: punch-clock.7z
temp/: Shutdown.ps1  Startup.ps1  install_gpedit.bat  remove_gpedit.bat
temp/backup/: 故障注入系统.docx
temp/backup/md/: common_main.cpp  nwswitchscriptgenerator.cpp  ssh_command_worker.cpp  vci_uds_service.cpp  vci_uds_transaction.cpp
temp/config/FKMaster/config/: can_analysis.json  common_config.ini  dbc_manager.json  ldf_manager.json  signal_analysis.ini  ui_history.ini  updater.ini
temp/config/FKMaster/config/can_collector/: config.ini  modules.json
tools/: CMakeLists.txt  main.cpp  thread_pool.hpp
tools/include/: logger.hpp  thread_pool.hpp
(+31 files in other folders)
